--- a/res/layout/smartpush_app_item.xml
+++ b/res/layout/smartpush_app_item.xml
@@ -2,21 +2,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:id="@+id/smartpush_item">
+    android:id="@+id/smartpush_app_item">
     
 	<ImageView android:layout_width="60dp"
 		android:layout_height="60dp"
-        android:id="@+id/smartpush_icon"
-        android:layout_centerInParent="true"/>
+        android:id="@+id/smartpush_app_icon"
+        android:layout_centerInParent="true"
+        android:contentDescription="@string/icon_description"/>
 
 	<TextView
-	    android:id="@+id/smartpush_text"
+	    android:id="@+id/smartpush_app_text"
 	    android:layout_width="80dp"
 	    android:layout_height="40dp"
-	    android:layout_below="@id/smartpush_icon" 
+	    android:layout_below="@id/smartpush_app_icon" 
 	    android:layout_marginTop="10dp"
 	    android:layout_centerHorizontal="true"
-	    android:textAlignment="center"
 	    android:gravity="bottom"
         />
 
